0.02
 - Fix example in doc.

0.01 2020-12-19T12:17:11+01:00
 - First version.